cpp/meetup/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.011s
user	0m0.002s
sys	0m0.009s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.81.0/BoostConfig.cmake (found suitable version "1.81.0", minimum required is "1.58") found components: date_time 
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
[ 25%] Building CXX object CMakeFiles/meetup.dir/meetup_test.cpp.o
[ 50%] Building CXX object CMakeFiles/meetup.dir/meetup.cpp.o
[ 75%] Building CXX object CMakeFiles/meetup.dir/test/tests-main.cpp.o
[100%] Linking CXX executable meetup
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
[100%] Built target meetup
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
===============================================================================
All tests passed (90 assertions in 90 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
[100%] Built target test_meetup
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/meetup.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/meetup.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)28476"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
meetup.cpp                                   111     111   100%   
meetup_test.cpp                              450     450   100%   
test/catch.hpp                                39      27    69%   1448-1450,1617-1618,1621-1622,1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        600     588    98%
------------------------------------------------------------------------------
lines: 98.0% (588 out of 600)
branches: 40.9% (830 out of 2030)

real	0m11.908s
user	0m10.758s
sys	0m1.142s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.351s
user	0m0.263s
sys	0m0.084s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:11,04: [C0103] Invalid directory variable name "Boost_USE_MULTITHREADED" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:12,04: [C0103] Invalid directory variable name "Boost_USE_STATIC_RUNTIME" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:20,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:22,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:69,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 5


real	0m0.199s
user	0m0.136s
sys	0m0.064s

===============================================================================

Running: clang-format-16 -style=file -i ./meetup.cpp ./meetup_test.cpp ./meetup.h

real	0m0.031s
user	0m0.019s
sys	0m0.011s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./meetup.cpp ./meetup_test.cpp ./meetup.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/meetup.h:4:
In file included from /usr/include/boost/date_time/gregorian/gregorian.hpp:19:
/usr/include/boost/date_time/compiler_config.hpp:11:10: fatal error: 'cstdlib' file not found
#include <cstdlib>
         ^~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/meetup.h.

real	0m5.209s
user	0m5.034s
sys	0m0.169s


real	0m5.211s
user	0m5.034s
sys	0m0.170s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
49795 warnings generated.
107180 warnings generated.
122106 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/meetup/meetup.h.
Suppressed 122111 warnings (122106 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m22.721s
user	0m22.463s
sys	0m0.256s
Running: clang-tidy-16 ./meetup.cpp ./meetup_test.cpp ./meetup.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/usr/include/boost/date_time/compiler_config.hpp:11:10: error: 'cstdlib' file not found [clang-diagnostic-error]
#include <cstdlib>
         ^~~~~~~~~


real	0m22.722s
user	0m22.463s
sys	0m0.259s

===============================================================================

